--- a/bdd/.env
+++ b/bdd/.env
@@ -1,4 +1,4 @@
 MYSQL_RANDOM_ROOT_PASSWORD=root
-MYSQL_USER=deeppicar
-MYSQL_PASSWORD=deeppicar
-MYSQL_DATABASE=deepicar
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=root
